--- a/findly-builder/src/app/components/app-header/app-header.component.html
+++ b/findly-builder/src/app/components/app-header/app-header.component.html
@@ -5,7 +5,7 @@
             <div class="homePageTitle d-none">
                 <span *ngIf="pagetitle !== undefined" class="currentTitle">{{pagetitle}}</span>
             </div>
-            <ul class="navbar-nav nav-flex-icons align-items-center right-menu-content">   
+            <ul class="navbar-nav nav-flex-icons align-items-center right-menu-content flex-row">   
                 <li class="nav-item pr-4 mr-2">
                     <img src="assets/icons/sidemenu/search.svg">
                     <div class="kr-sg-input-search d-none">                               
