--- a/findly-builder/src/app/components/app-menu/app-menu.component.scss
+++ b/findly-builder/src/app/components/app-menu/app-menu.component.scss
@@ -17,6 +17,7 @@ app-mainmenu{
 			width: 245px;
 			transition: 0.33s;	
 			padding: 15px;	
+			z-index: 2;
 			.sub-title{
 				padding: 0 13px;
 				color: #5F6368;
